src/Sdl3Sharp.ImGui/Native/ImGui.cs


    /// <summary>
    /// hyperlink text button, automatically open file/url when clicked
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TextLinkOpenURLEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TextLinkOpenURLEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string url);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ImageEx")]
    public static partial void ImageEx(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0, ImVec2 uv1);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ImageWithBgEx")]
    public static partial void ImageWithBgEx(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0, ImVec2 uv1, ImVec4 bg_col, ImVec4 tint_col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ImageButtonEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ImageButtonEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0, ImVec2 uv1, ImVec4 bg_col, ImVec4 tint_col);

    #endregion

    #region Widgets: Combo Box (Dropdown)

    /// <summary>
    /// Widgets: Combo Box (Dropdown)
    /// - The BeginCombo()/EndCombo() api allows you to manage your contents and selection state however you want it, by creating e.g. Selectable() items.
    /// - The old Combo() api are helpers over BeginCombo()/EndCombo() which are kept available for convenience purpose. This is analogous to how ListBox are created.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginCombo")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginCombo([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string preview_value, ImGuiComboFlags flags);

    /// <summary>
    /// only call EndCombo() if BeginCombo() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndCombo")]
    public static partial void EndCombo();

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ComboCharEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ComboCharEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* current_item, nint items, int items_count, int popup_max_height_in_items);

    /// <summary>
    /// Separate items with \0 within a string, end item-list with \0\0. e.g. "One\0Two\0Three\0"
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ComboEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ComboEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* current_item, [MarshalAs(UnmanagedType.LPUTF8Str)] string items_separated_by_zeros, int popup_max_height_in_items);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ComboCallbackEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ComboCallbackEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* current_item, nint getter, nint user_data, int items_count, int popup_max_height_in_items);

    /// <summary>
    /// If v_min &gt;= v_max we have no bound
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragFloatEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragFloat2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragFloat2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragFloat3Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragFloat3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragFloat4Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragFloat4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragFloatRange2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragFloatRange2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* v_current_min, float* v_current_max, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, [MarshalAs(UnmanagedType.LPUTF8Str)] string format_max, ImGuiSliderFlags flags);

    /// <summary>
    /// If v_min &gt;= v_max we have no bound
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragIntEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragInt2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragInt2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragInt3Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragInt3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragInt4Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragInt4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragIntRange2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragIntRange2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* v_current_min, int* v_current_max, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, [MarshalAs(UnmanagedType.LPUTF8Str)] string format_max, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragScalarEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiDataType data_type, nint p_data, float v_speed, nint p_min, nint p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_DragScalarNEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool DragScalarNEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiDataType data_type, nint p_data, int components, float v_speed, nint p_min, nint p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    /// <summary>
    /// adjust format to decorate the value with a prefix or a suffix for in-slider labels or unit display.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderFloatEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderFloat2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderFloat2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderFloat3Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderFloat3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderFloat4Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderFloat4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderAngleEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderAngleEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* v_rad, float v_degrees_min, float v_degrees_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderIntEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderInt2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderInt2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderInt3Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderInt3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderInt4Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderInt4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderScalarEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiDataType data_type, nint p_data, nint p_min, nint p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SliderScalarNEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SliderScalarNEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiDataType data_type, nint p_data, int components, nint p_min, nint p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_VSliderFloatEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool VSliderFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, float* v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);
